test/code/test_try_catch_finally.out
hey!
Exception: it's broken
and ends first one
hey again!
should this appears?

Fatal error: Uncaught exception 'Exception' with message 'Another exception in chain!' in {{CWD}}/test/code/test_try_catch_finally.php:18
Stack trace:
#0 {main}
  thrown in {{CWD}}/test/code/test_try_catch_finally.php on line 18
